--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>guava</artifactId>
             <version>21.0</version>
         </dependency>
+        <dependency>
+            <groupId>cn.codetector.jet</groupId>
+            <artifactId>std</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
