--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>cn.codetector.jet</groupId>
             <artifactId>jet-simple-json</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
